--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -147,7 +147,7 @@
 \uselocalpackage{packages/caption/}{caption3}
 \uselocalpackage{packages/caption/}{caption}
 \uselocalpackage{packages/caption/}{subcaption}
-\uselocalpackage{packages/subfiglist/}{subfiglist}
+\uselocalpackage[ew=0.5\textwidth]{packages/subfiglist/}{subfiglist}
 \usepackage{pict2e}
 \usepackage{pstricks}
 
